Замена ссылок, убран класс "ошибки" контактной формы

--- a/catalog-perforator.html
+++ b/catalog-perforator.html
@@ -5,7 +5,7 @@
     <title>Перфораторы - интернет-магазин «Техномарт»</title>
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700%7CPT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css/style-min.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
     <a class="skip-header hidden" href="#start-of-main">Перейти к основному содержанию</a>
@@ -26,13 +26,13 @@
           </form>
           <ul class="user-tools">
             <li class="user-tools__item">
-              <a class="user-tools__link user-tools__link--icon user-tools__link--bookmarks" href="user/bookmarks.html">Закладки: 0</a>
+              <a class="user-tools__link user-tools__link--icon user-tools__link--bookmarks" href="#">Закладки: 0</a>
             </li>
             <li class="user-tools__item">
-              <a class="user-tools__link user-tools__link--icon user-tools__link--cart user-tools__link--cart-active" href="user/cart.html">Корзина: 10</a>
+              <a class="user-tools__link user-tools__link--icon user-tools__link--cart user-tools__link--cart-active" href="#">Корзина: 10</a>
             </li>
             <li class="user-tools__item">
-              <a class="user-tools__link user-tools__link--order" href="user/order.html">Оформить заказ</a>
+              <a class="user-tools__link user-tools__link--order" href="#">Оформить заказ</a>
             </li>
           </ul>
         </div>
@@ -49,20 +49,20 @@
         <div class="user-nav">
           <ul class="user-login">
             <li class="user-login__item">
-              <a class="user-login__link user-login__link--icon user-login__link--profile" href="user/profile.html">Равшан Джамшутович</a>
+              <a class="user-login__link user-login__link--icon user-login__link--profile" href="#">Равшан Джамшутович</a>
             </li>
             <li class="user-login__item user-login__item--logout">
-              <a class="user-login__link user-login__link--icon user-login__link--logout" href="user/logout.html">
+              <a class="user-login__link user-login__link--icon user-login__link--logout" href="#">
                 <span class="hidden">Выйти</span>
               </a>
             </li>
           </ul>
           <ul class="user-account">
             <li class="user-account__item">
-              <a class="user-account__link" href="user/history.html">Мои заказы</a>
+              <a class="user-account__link" href="#">Мои заказы</a>
             </li>
             <li class="user-account__item">
-              <a class="user-account__link" href="user/account.html">Личный кабинет</a>
+              <a class="user-account__link" href="#">Личный кабинет</a>
             </li>
           </ul>
         </div>
@@ -74,22 +74,22 @@
             <a class="site-nav__link" href="index.html">Главная</a>
           </li>
           <li class="site-nav__item">
-            <a class="site-nav__link" href="company.html">Компания</a>
+            <a class="site-nav__link" href="#">Компания</a>
           </li>
           <li class="site-nav__item">
-            <a class="site-nav__link site-nav__link--active" href="catalog.html">Каталог</a>
+            <a class="site-nav__link site-nav__link--active" href="#">Каталог</a>
           </li>
           <li class="site-nav__item">
-            <a class="site-nav__link" href="news.html">Новости</a>
+            <a class="site-nav__link" href="#">Новости</a>
           </li>
           <li class="site-nav__item">
-            <a class="site-nav__link" href="special-offers.html">Спецпредложения</a>
+            <a class="site-nav__link" href="#">Спецпредложения</a>
           </li>
           <li class="site-nav__item">
-            <a class="site-nav__link" href="shipping.html">Доставка</a>
+            <a class="site-nav__link" href="#">Доставка</a>
           </li>
           <li class="site-nav__item">
-            <a class="site-nav__link" href="contact.html">Контакты</a>
+            <a class="site-nav__link" href="#">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -111,10 +111,10 @@
             </a>
           </li>
           <li class="breadcrumbs__item">
-            <a class="breadcrumbs__link" href="catalog.html">Каталог</a>
+            <a class="breadcrumbs__link" href="#">Каталог</a>
           </li>
           <li class="breadcrumbs__item">
-            <a class="breadcrumbs__link" href="tools.html">Инструмент</a>
+            <a class="breadcrumbs__link" href="#">Инструмент</a>
           </li>
           <li class="breadcrumbs__item" aria-current="page">Перфораторы</li>
         </ol>
@@ -229,7 +229,7 @@
 
             <ul class="catalog__list">
               <li class="catalog__item product">
-                <a class="product__link" href="product.html">
+                <a class="product__link" href="#">
                   <h3 class="product__title">
                     <span class="product__category">Перфоратор BOSCH</span>
                     <span class="product__model">BFG 3000</span>
@@ -239,14 +239,14 @@
                   </p>
                 </a>
                 <p class="product__action">
-                  <a class="product__btn product__btn--add-cart" href="user/cart.html">Купить</a>
-                  <a class="product__btn product__btn--add-bookmark" href="user/bookmarks.html">В закладки</a>
+                  <a class="product__btn product__btn--add-cart" href="#">Купить</a>
+                  <a class="product__btn product__btn--add-bookmark" href="#">В закладки</a>
                 </p>
                 <s class="product__price product__price--old">22500 р.</s>
                 <span class="product__price product__price--actual">15500 р.</span>
               </li>
               <li class="catalog__item product">
-                <a class="product__link" href="product.html">
+                <a class="product__link" href="#">
                   <h3 class="product__title">
                     <span class="product__category">Перфоратор BOSCH</span>
                     <span class="product__model">BFG 6000</span>
@@ -256,14 +256,14 @@
                   </p>
                 </a>
                 <p class="product__action">
-                  <a class="product__btn product__btn--add-cart" href="user/cart.html">Купить</a>
-                  <a class="product__btn product__btn--add-bookmark" href="user/bookmarks.html">В закладки</a>
+                  <a class="product__btn product__btn--add-cart" href="#">Купить</a>
+                  <a class="product__btn product__btn--add-bookmark" href="#">В закладки</a>
                 </p>
                 <s class="product__price product__price--old">30500 р.</s>
                 <span class="product__price product__price--actual">25500 р.</span>
               </li>
               <li class="catalog__item product tag-new">
-                <a class="product__link" href="product.html">
+                <a class="product__link" href="#">
                   <h3 class="product__title">
                     <span class="product__category">Перфоратор BOSCH</span>
                     <span class="product__model">BFG 2000</span>
@@ -273,14 +273,14 @@
                   </p>
                 </a>
                 <p class="product__action">
-                  <a class="product__btn product__btn--add-cart" href="user/cart.html">Купить</a>
-                  <a class="product__btn product__btn--add-bookmark" href="user/bookmarks.html">В закладки</a>
+                  <a class="product__btn product__btn--add-cart" href="#">Купить</a>
+                  <a class="product__btn product__btn--add-bookmark" href="#">В закладки</a>
                 </p>
                 <span class="product__price product__price--actual">12500 р.</span>
               </li>
 
               <li class="catalog__item product">
-                <a class="product__link" href="product.html">
+                <a class="product__link" href="#">
                   <h3 class="product__title">
                     <span class="product__category">Перфоратор BOSCH</span>
                     <span class="product__model">BFG 3000</span>
@@ -290,14 +290,14 @@
                   </p>
                 </a>
                 <p class="product__action">
-                  <a class="product__btn product__btn--add-cart" href="user/cart.html">Купить</a>
-                  <a class="product__btn product__btn--add-bookmark" href="user/bookmarks.html">В закладки</a>
+                  <a class="product__btn product__btn--add-cart" href="#">Купить</a>
+                  <a class="product__btn product__btn--add-bookmark" href="#">В закладки</a>
                 </p>
                 <s class="product__price product__price--old">22500 р.</s>
                 <span class="product__price product__price--actual">15500 р.</span>
               </li>
               <li class="catalog__item product tag-new">
-                <a class="product__link" href="product.html">
+                <a class="product__link" href="#">
                   <h3 class="product__title">
                     <span class="product__category">Перфоратор BOSCH</span>
                     <span class="product__model">BFG 6000</span>
@@ -307,14 +307,14 @@
                   </p>
                 </a>
                 <p class="product__action">
-                  <a class="product__btn product__btn--add-cart" href="user/cart.html">Купить</a>
-                  <a class="product__btn product__btn--add-bookmark" href="user/bookmarks.html">В закладки</a>
+                  <a class="product__btn product__btn--add-cart" href="#">Купить</a>
+                  <a class="product__btn product__btn--add-bookmark" href="#">В закладки</a>
                 </p>
                 <s class="product__price product__price--old">30500 р.</s>
                 <span class="product__price product__price--actual">25500 р.</span>
               </li>
               <li class="catalog__item product">
-                <a class="product__link" href="product.html">
+                <a class="product__link" href="#">
                   <h3 class="product__title">
                     <span class="product__category">Перфоратор BOSCH</span>
                     <span class="product__model">BFG 2000</span>
@@ -324,14 +324,14 @@
                   </p>
                 </a>
                 <p class="product__action">
-                  <a class="product__btn product__btn--add-cart" href="user/cart.html">Купить</a>
-                  <a class="product__btn product__btn--add-bookmark" href="user/bookmarks.html">В закладки</a>
+                  <a class="product__btn product__btn--add-cart" href="#">Купить</a>
+                  <a class="product__btn product__btn--add-bookmark" href="#">В закладки</a>
                 </p>
                 <span class="product__price product__price--actual">12500 р.</span>
               </li>
 
               <li class="catalog__item product tag-new">
-                <a class="product__link" href="product.html">
+                <a class="product__link" href="#">
                   <h3 class="product__title">
                     <span class="product__category">Перфоратор BOSCH</span>
                     <span class="product__model">BFG 3000</span>
@@ -341,14 +341,14 @@
                   </p>
                 </a>
                 <p class="product__action">
-                  <a class="product__btn product__btn--add-cart" href="user/cart.html">Купить</a>
-                  <a class="product__btn product__btn--add-bookmark" href="user/bookmarks.html">В закладки</a>
+                  <a class="product__btn product__btn--add-cart" href="#">Купить</a>
+                  <a class="product__btn product__btn--add-bookmark" href="#">В закладки</a>
                 </p>
                 <s class="product__price product__price--old">22500 р.</s>
                 <span class="product__price product__price--actual">15500 р.</span>
               </li>
               <li class="catalog__item product">
-                <a class="product__link" href="product.html">
+                <a class="product__link" href="#">
                   <h3 class="product__title">
                     <span class="product__category">Перфоратор BOSCH</span>
                     <span class="product__model">BFG 6000</span>
@@ -358,14 +358,14 @@
                   </p>
                 </a>
                 <p class="product__action">
-                  <a class="product__btn product__btn--add-cart" href="user/cart.html">Купить</a>
-                  <a class="product__btn product__btn--add-bookmark" href="user/bookmarks.html">В закладки</a>
+                  <a class="product__btn product__btn--add-cart" href="#">Купить</a>
+                  <a class="product__btn product__btn--add-bookmark" href="#">В закладки</a>
                 </p>
                 <s class="product__price product__price--old">30500 р.</s>
                 <span class="product__price product__price--actual">25500 р.</span>
               </li>
               <li class="catalog__item product">
-                <a class="product__link" href="product.html">
+                <a class="product__link" href="#">
                   <h3 class="product__title">
                     <span class="product__category">Перфоратор BOSCH</span>
                     <span class="product__model">BFG 2000</span>
@@ -375,8 +375,8 @@
                   </p>
                 </a>
                 <p class="product__action">
-                  <a class="product__btn product__btn--add-cart" href="user/cart.html">Купить</a>
-                  <a class="product__btn product__btn--add-bookmark" href="user/bookmarks.html">В закладки</a>
+                  <a class="product__btn product__btn--add-cart" href="#">Купить</a>
+                  <a class="product__btn product__btn--add-bookmark" href="#">В закладки</a>
                 </p>
                 <span class="product__price product__price--actual">12500 р.</span>
               </li>
@@ -431,33 +431,33 @@
         <nav class="site-nav-footer">
           <ul class="site-nav-footer__list">
             <li class="site-nav-footer__item">
-              <a class="site-nav-footer__link" href="company.html">Компания</a>
+              <a class="site-nav-footer__link" href="#">Компания</a>
             </li>
             <li class="site-nav-footer__item">
-              <a class="site-nav-footer__link" href="news.html">Новости</a>
+              <a class="site-nav-footer__link" href="#">Новости</a>
             </li>
             <li class="site-nav-footer__item">
-              <a class="site-nav-footer__link" href="catalog.html">Каталог</a>
+              <a class="site-nav-footer__link" href="#">Каталог</a>
             </li>
             <li class="site-nav-footer__item">
-              <a class="site-nav-footer__link" href="shipping.html">Доставка</a>
+              <a class="site-nav-footer__link" href="#">Доставка</a>
             </li>
             <li class="site-nav-footer__item">
-              <a class="site-nav-footer__link" href="contact.html">Контакты</a>
+              <a class="site-nav-footer__link" href="#">Контакты</a>
             </li>
           </ul>
           <ul class="site-nav-add__list">
             <li class="site-nav-add__item">
-              <a class="site-nav-add__link" href="materials.html">Материалы</a>
+              <a class="site-nav-add__link" href="#">Материалы</a>
             </li>
             <li class="site-nav-add__item">
-              <a class="site-nav-add__link" href="technics.html">Техника</a>
+              <a class="site-nav-add__link" href="#">Техника</a>
             </li>
             <li class="site-nav-add__item">
-              <a class="site-nav-add__link" href="tools.html">Инструмент</a>
+              <a class="site-nav-add__link" href="#">Инструмент</a>
             </li>
             <li class="site-nav-add__item">
-              <a class="site-nav-add__link" href="special-offers.html">Спецпредложения</a>
+              <a class="site-nav-add__link" href="#">Спецпредложения</a>
             </li>
           </ul>
         </nav>
@@ -471,17 +471,17 @@
           </p>
           <ul class="social">
             <li class="social__item">
-              <a class="social__link social__link--vk" href="https://vk.com">
+              <a class="social__link social__link--vk" href="#">
                 <span class="hidden">Мы во Вконтакте</span>
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--fb" href="https://www.facebook.com">
+              <a class="social__link social__link--fb" href="#">
                 <span class="hidden">Мы в Фейсбуке</span>
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--insta" href="https://www.instagram.com">
+              <a class="social__link social__link--insta" href="#">
                 <span class="hidden">Мы в Инстраграме</span>
               </a>
             </li>
@@ -507,7 +507,7 @@
       <h2 class="hidden">Сообщение покупателю</h2>
       <p class="message__text">Товар добавлен в корзину!</p>
       <div class="popup__footer message__footer">
-        <a class="message__btn message__btn--order btn-red" href="user/order.html">Оформить заказ</a>
+        <a class="message__btn message__btn--order btn-red" href="#">Оформить заказ</a>
         <button class="message__btn message__btn--close btn-red btn-reset" type="button">Продолжить покупки</button>
       </div>
       <button class="popup__close btn-reset" type="button">
@@ -516,6 +516,6 @@
     </article>
 
 
-  <script src="js/popup-min.js"></script>
+  <script src="js/popup.min.js"></script>
   </body>
 </html>
