--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Интернет-магазин «Техномарт»</title>
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700%7CPT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css/style-min.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
     <a class="skip-header hidden" href="#start-of-main">Перейти к основному содержанию</a>
@@ -26,13 +26,13 @@
           </form>
           <ul class="user-tools">
             <li class="user-tools__item">
-              <a class="user-tools__link user-tools__link--icon user-tools__link--bookmarks" href="user/bookmarks.html">Закладки: 0</a>
+              <a class="user-tools__link user-tools__link--icon user-tools__link--bookmarks" href="#">Закладки: 0</a>
             </li>
             <li class="user-tools__item">
-              <a class="user-tools__link user-tools__link--icon user-tools__link--cart" href="user/cart.html">Корзина: 0</a>
+              <a class="user-tools__link user-tools__link--icon user-tools__link--cart" href="#">Корзина: 0</a>
             </li>
             <li class="user-tools__item">
-              <a class="user-tools__link user-tools__link--order" href="user/order.html">Оформить заказ</a>
+              <a class="user-tools__link user-tools__link--order" href="#">Оформить заказ</a>
             </li>
           </ul>
         </div>
@@ -49,10 +49,10 @@
         <div class="user-nav">
           <ul class="user-login">
             <li class="user-login__item">
-              <a class="user-login__link user-login__link--icon user-login__link--login" href="user/login.html">Войти</a>
+              <a class="user-login__link user-login__link--icon user-login__link--login" href="#">Войти</a>
             </li>
             <li class="user-login__item">
-              <a class="user-login__link" href="user/registration.html">Регистрация</a>
+              <a class="user-login__link" href="#">Регистрация</a>
             </li>
           </ul>
         </div>
@@ -64,22 +64,22 @@
             <a class="site-nav__link">Главная</a>
           </li>
           <li class="site-nav__item">
-            <a class="site-nav__link" href="company.html">Компания</a>
+            <a class="site-nav__link" href="#">Компания</a>
           </li>
           <li class="site-nav__item">
             <a class="site-nav__link" href="catalog-perforator.html">Каталог</a><!-- Ссылка заменена для выполнения критерия Д24-->
           </li>
           <li class="site-nav__item">
-            <a class="site-nav__link" href="news.html">Новости</a>
+            <a class="site-nav__link" href="#">Новости</a>
           </li>
           <li class="site-nav__item">
-            <a class="site-nav__link" href="special-offers.html">Спецпредложения</a>
+            <a class="site-nav__link" href="#">Спецпредложения</a>
           </li>
           <li class="site-nav__item">
-            <a class="site-nav__link" href="shipping.html">Доставка</a>
+            <a class="site-nav__link" href="#">Доставка</a>
           </li>
           <li class="site-nav__item">
-            <a class="site-nav__link" href="contact.html">Контакты</a>
+            <a class="site-nav__link" href="#">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -98,15 +98,15 @@
         <ul class="promo__list">
           <li class="promo__item promo__materials tag-new">
             <h3 class="promo__item-title">Материалы</h3>
-            <a class="promo__link" href="materials.html">на любой вкус</a>
+            <a class="promo__link" href="#">на любой вкус</a>
           </li>
           <li class="promo__item promo__tools">
             <h3 class="promo__item-title">Инструмент</h3>
-            <a class="promo__link" href="tools.html">на все случаи</a>
+            <a class="promo__link" href="#">на все случаи</a>
           </li>
           <li class="promo__item promo__technics">
             <h3 class="promo__item-title">Техника</h3>
-            <a class="promo__link" href="technics.html">для стройки</a>
+            <a class="promo__link" href="#">для стройки</a>
           </li>
           <!-- ===== SLIDER ===== -->
           <li class="promo__item slider">
@@ -137,17 +137,17 @@
                 <p class="slide__description">Соседям на радость!</p>
               </figcaption>
               <img class="slide__image" src="img/slide-drill.jpg" width="620" height="266" alt="Рабочий с дрелью">
-              <a class="slide__link-more btn-red" href="catalog-drill.html">Открыть каталог</a>
+              <a class="slide__link-more btn-red" href="#">Открыть каталог</a>
             </figure>
           </li>
           <!-- ===== END SLIDER ===== -->
           <li class="promo__item promo__sale">
             <h3 class="promo__item-title">Скидки 50%</h3>
-            <a class="promo__link" href="sale.html">на 350 товаров</a>
+            <a class="promo__link" href="#">на 350 товаров</a>
           </li>
           <li class="promo__item promo__shipping">
             <h3 class="promo__item-title">Доставка</h3>
-            <a class="promo__link" href="shipping.html">бесплатно</a>
+            <a class="promo__link" href="#">бесплатно</a>
           </li>
         </ul>
       </section>
@@ -155,11 +155,11 @@
       <section class="catalog catalog--promo page-container">
         <header class="catalog__header">
           <h2 class="catalog__title">Популярные товары:</h2>
-          <a class="catalog__link-more btn-red" href="catalog-promo.html">все популярные товары</a>
+          <a class="catalog__link-more btn-red" href="#">все популярные товары</a>
         </header>
         <ul class="catalog__list catalog__list--promo">
           <li class="catalog__item catalog__item--promo product">
-            <a class="product__link" href="product.html">
+            <a class="product__link" href="#">
               <h3 class="product__title">
                 <span class="product__name">Перфоратор BOSCH</span>
                 <span class="product__model">BFG 9000</span>
@@ -169,14 +169,14 @@
               </p>
             </a>
             <p class="product__action">
-              <a class="product__btn product__btn--add-cart" href="user/cart.html">Купить</a>
-              <a class="product__btn product__btn--add-bookmark" href="user/bookmarks.html">В закладки</a>
+              <a class="product__btn product__btn--add-cart" href="#">Купить</a>
+              <a class="product__btn product__btn--add-bookmark" href="#">В закладки</a>
             </p>
             <s class="product__price product__price--old">32500 р.</s>
             <span class="product__price product__price--actual">25500 р.</span>
           </li>
           <li class="catalog__item catalog__item--promo product">
-            <a class="product__link" href="product.html">
+            <a class="product__link" href="#">
               <h3 class="product__title">
                 <span class="product__name">Перфоратор BOSCH</span>
                 <span class="product__model">BFG 3000</span>
@@ -186,14 +186,14 @@
               </p>
             </a>
             <p class="product__action">
-              <a class="product__btn product__btn--add-cart" href="user/cart.html">Купить</a>
-              <a class="product__btn product__btn--add-bookmark" href="user/bookmarks.html">В закладки</a>
+              <a class="product__btn product__btn--add-cart" href="#">Купить</a>
+              <a class="product__btn product__btn--add-bookmark" href="#">В закладки</a>
             </p>
             <s class="product__price product__price--old">22500 р.</s>
             <span class="product__price product__price--actual">15500 р.</span>
           </li>
           <li class="catalog__item catalog__item--promo product">
-            <a class="product__link" href="product.html">
+            <a class="product__link" href="#">
               <h3 class="product__title">
                 <span class="product__name">Перфоратор BOSCH</span>
                 <span class="product__model">BFG 6000</span>
@@ -203,14 +203,14 @@
               </p>
             </a>
             <p class="product__action">
-              <a class="product__btn product__btn--add-cart" href="user/cart.html">Купить</a>
-              <a class="product__btn product__btn--add-bookmark" href="user/bookmarks.html">В закладки</a>
+              <a class="product__btn product__btn--add-cart" href="#">Купить</a>
+              <a class="product__btn product__btn--add-bookmark" href="#">В закладки</a>
             </p>
             <s class="product__price product__price--old">30500 р.</s>
             <span class="product__price product__price--actual">25500 р.</span>
           </li>
           <li class="catalog__item catalog__item--promo product tag-new">
-            <a class="product__link" href="product.html">
+            <a class="product__link" href="#">
               <h3 class="product__title">
                 <span class="product__name">Перфоратор BOSCH</span>
                 <span class="product__model">BFG 2000</span>
@@ -220,8 +220,8 @@
               </p>
             </a>
             <p class="product__action">
-              <a class="product__btn product__btn--add-cart" href="user/cart.html">Купить</a>
-              <a class="product__btn product__btn--add-bookmark" href="user/bookmarks.html">В закладки</a>
+              <a class="product__btn product__btn--add-cart" href="#">Купить</a>
+              <a class="product__btn product__btn--add-bookmark" href="#">В закладки</a>
             </p>
             <span class="product__price product__price--actual">12500 р.</span>
           </li>
@@ -231,46 +231,46 @@
       <section class="brands page-container">
         <header class="brands__header">
           <h2 class="brands__title">Популярные производители:</h2>
-          <a class="brands__link-more btn-red" href="brands.html">все производители</a>
+          <a class="brands__link-more btn-red" href="#">все производители</a>
         </header>
         <ul class="brands__list">
           <li class="brands__item">
-            <a class="brands__link" href="bosch.html">
+            <a class="brands__link" href="#">
               <img class="brands__img" src="img/brand-bosch.png" width="122" height="32" alt="Bosch">
             </a>
           </li>
           <li class="brands__item">
-            <a class="brands__link" href="makita.html">
+            <a class="brands__link" href="#">
               <img class="brands__img" src="img/brand-makita.png" width="123" height="40" alt="Makita">
             </a>
           </li>
           <li class="brands__item">
-            <a class="brands__link" href="dewalt.html">
+            <a class="brands__link" href="#">
               <img class="brands__img" src="img/brand-dewalt.png" width="146" height="44" alt="DeWALT">
             </a>
           </li>
           <li class="brands__item">
-            <a class="brands__link" href="interskol.html">
+            <a class="brands__link" href="#">
               <img class="brands__img" src="img/brand-interskol.png" width="184" height="32" alt="Интерскол">
             </a>
           </li>
           <li class="brands__item">
-            <a class="brands__link" href="hitachi.html">
+            <a class="brands__link" href="#">
               <img class="brands__img" src="img/brand-hitachi.png" width="143" height="22" alt="Hitachi">
             </a>
           </li>
           <li class="brands__item">
-            <a class="brands__link" href="lg.html">
+            <a class="brands__link" href="#">
               <img class="brands__img" src="img/brand-lg.png" width="121" height="73" alt="LG">
             </a>
           </li>
           <li class="brands__item">
-            <a class="brands__link" href="aeg-power-solutions.html">
+            <a class="brands__link" href="#">
               <img class="brands__img" src="img/brand-aeg.png" width="138" height="65" alt="AEG Power Solutions">
             </a>
           </li>
           <li class="brands__item">
-            <a class="brands__link" href="metabo.html">
+            <a class="brands__link" href="#">
               <img class="brands__img" src="img/brand-metabo.png" width="155" height="55" alt="metabo">
             </a>
           </li>
@@ -314,7 +314,7 @@
                   Залезть в долговую яму стало проще!<br>
                   Кредитные консультанты придут вам на помощь.
                 </p>
-                <a class="tab__link btn-red" href="contact.html">Отправить заявку</a>
+                <a class="tab__link btn-red" href="#">Отправить заявку</a>
               </li>
             </ul>
           </div>
@@ -339,7 +339,7 @@
             <li class="about-company__item">Автотрейдинг</li>
             <li class="about-company__item">ЖелДорЭкспедиция</li>
           </ul>
-          <a class="about-company__link btn-red" href="company.html">Подробнее о компании</a>
+          <a class="about-company__link btn-red" href="#">Подробнее о компании</a>
         </section>
 
         <section class="our-contacts">
@@ -351,7 +351,7 @@
           <a class="our-contacts__map-link" href="https://yandex.ru/maps">
             <img class="our-contacts__map-img" src="img/contact-map.png" width="300" height="158" alt="Как добраться: г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
           </a>
-          <a class="our-contacts__link btn-red" href="contact.html">Заблудились? Напишите нам!</a>
+          <a class="our-contacts__link btn-red" href="#">Заблудились? Напишите нам!</a>
         </section>
 
       </section>
@@ -374,33 +374,33 @@
         <nav class="site-nav-footer">
           <ul class="site-nav-footer__list">
             <li class="site-nav-footer__item">
-              <a class="site-nav-footer__link" href="company.html">Компания</a>
+              <a class="site-nav-footer__link" href="#">Компания</a>
             </li>
             <li class="site-nav-footer__item">
-              <a class="site-nav-footer__link" href="news.html">Новости</a>
+              <a class="site-nav-footer__link" href="#">Новости</a>
             </li>
             <li class="site-nav-footer__item">
               <a class="site-nav-footer__link" href="catalog-perforator.html">Каталог</a><!-- Ссылка заменена для выполнения критерия Д24-->
             </li>
             <li class="site-nav-footer__item">
-              <a class="site-nav-footer__link" href="shipping.html">Доставка</a>
+              <a class="site-nav-footer__link" href="#">Доставка</a>
             </li>
             <li class="site-nav-footer__item">
-              <a class="site-nav-footer__link" href="contact.html">Контакты</a>
+              <a class="site-nav-footer__link" href="#">Контакты</a>
             </li>
           </ul>
           <ul class="site-nav-add__list">
             <li class="site-nav-add__item">
-              <a class="site-nav-add__link" href="materials.html">Материалы</a>
+              <a class="site-nav-add__link" href="#">Материалы</a>
             </li>
             <li class="site-nav-add__item">
-              <a class="site-nav-add__link" href="technics.html">Техника</a>
+              <a class="site-nav-add__link" href="#">Техника</a>
             </li>
             <li class="site-nav-add__item">
-              <a class="site-nav-add__link" href="tools.html">Инструмент</a>
+              <a class="site-nav-add__link" href="#">Инструмент</a>
             </li>
             <li class="site-nav-add__item">
-              <a class="site-nav-add__link" href="special-offers.html">Спецпредложения</a>
+              <a class="site-nav-add__link" href="#">Спецпредложения</a>
             </li>
           </ul>
         </nav>
@@ -414,17 +414,17 @@
           </p>
           <ul class="social">
             <li class="social__item">
-              <a class="social__link social__link--vk" href="https://vk.com">
+              <a class="social__link social__link--vk" href="#">
                 <span class="hidden">Мы во Вконтакте</span>
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--fb" href="https://www.facebook.com">
+              <a class="social__link social__link--fb" href="#">
                 <span class="hidden">Мы в Фейсбуке</span>
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--insta" href="https://www.instagram.com">
+              <a class="social__link social__link--insta" href="#">
                 <span class="hidden">Мы в Инстраграме</span>
               </a>
             </li>
@@ -452,15 +452,15 @@
         <div class="write-us__fields">
           <p class="write-us__item">
             <label class="write-us__label" for="write-us-name">Ваше имя:</label>
-            <input class="write-us__input input-reset" id="write-us-name" type="text" name="name" value="" placeholder="Представьтесь, пожалуйста" autocomplete="on">
+            <input class="write-us__input input-reset" id="write-us-name" type="text" name="name" value="" placeholder="Представьтесь, пожалуйста" autocomplete="on" required>
           </p>
           <p class="write-us__item">
             <label class="write-us__label" for="write-us-email">Ваш e-mail:</label>
-            <input class="write-us__input input-reset" id="write-us-email" type="email" name="email" value="" placeholder="Для отправки ответа" autocomplete="on">
+            <input class="write-us__input input-reset" id="write-us-email" type="email" name="email" value="" placeholder="Для отправки ответа" autocomplete="on" required>
           </p>
           <p class="write-us__item write-us__item--text">
             <label class="write-us__label" for="write-us-text">Текст письма:</label>
-            <textarea class="write-us__input write-us__input--textarea input-reset" id="write-us-text" name="text" cols="30" rows="5" placeholder="В свободной форме" spellcheck></textarea>
+            <textarea class="write-us__input write-us__input--textarea input-reset" id="write-us-text" name="text" cols="30" rows="5" placeholder="В свободной форме" spellcheck required></textarea>
           </p>
         </div>
         <div class="popup__footer">
@@ -490,7 +490,7 @@
       <h2 class="hidden">Сообщение покупателю</h2>
       <p class="message__text">Товар добавлен в корзину!</p>
       <div class="popup__footer message__footer">
-        <a class="message__btn message__btn--order btn-red" href="user/order.html">Оформить заказ</a>
+        <a class="message__btn message__btn--order btn-red" href="#">Оформить заказ</a>
         <button class="message__btn message__btn--close btn-red btn-reset" type="button">Продолжить покупки</button>
       </div>
       <button class="popup__close btn-reset" type="button">
@@ -499,6 +499,6 @@
     </article>
 
 
-  <script src="js/popup-min.js"></script>
+  <script src="js/popup.min.js"></script>
   </body>
 </html>
