--- a/catalog-perforator.html
+++ b/catalog-perforator.html
@@ -408,7 +408,7 @@
           <h2 class="about-tool__title">Пара слов о перфораторах</h2>
           <p class="about-tool__text">
             Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
-            Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В&nbsp;ассортиментном ряду есть выбор «трехрежимников»: в одном ударнаястройстве будут совмещены отбойный молоток и ударная дрель.
+            Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В&nbsp;ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
           </p>
         </section>
       </div>
